--- a/index.html
+++ b/index.html
@@ -4,35 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="/CSS/style.css">
 </head>
 <body>
   <div class="heading"><!--<h2>Home_</h2>-->
     <div class="moving-icon">
       <div class="display-effect">
       <h2 class="display-1">More info</h2>
-      <img class="display-2" src="../Icons/arrows.png" alt="green-arrow">
+      <img class="display-2" src="/Icons/arrows.png" alt="green-arrow">
       </div>
       <div class="links">
         <a href="" class="active">Home</a><a href="about.html">About</a> <a href="Projects.html">Projects</a>
-      </div>
+      </div> 
     </div>
   </div>
-  <div class="fire-fox-doc"><img id="show-link" src="../Icons/FireFox-logo.png"></div>
+  <div class="fire-fox-doc"><img id="show-link" src="/Icons/FireFox-logo.png"></div>
   <div id="hidden-section">
     <div class="window">
       <div class="opening-section">
-        <div class="tab"><img src="../Icons/firefox.png">Ridge's Portfolio<img src="../Icons/letter-x.png"></div>
+        <div class="tab"><img src="/Icons/firefox.png">Ridge's Portfolio<img src="/Icons/letter-x.png"></div>
         <div class="icon-functions">
-          <img id="hide-link" src="../Icons/editing.png"><img id="maximize-btn" src="../Icons/square.png"><img id="close-btn" src="../Icons/letter-x.png">
+          <img id="hide-link" src="/Icons/"><img id="maximize-btn" src="/Icons/square.png"><img id="close-btn" src="/Icons/letter-x.png">
         </div>
       </div>  
     </div>
     <div class="window-2">
-      <div class="search-bar"><img src="../Icons/left-arrow.png"> <input type="text" id="search-box" placeholder="  Search or enter address"></div>
+      <div class="search-bar"><img src="/Icons/left-arrow.png"> <input type="text" id="search-box" placeholder="  Search or enter address"></div>
     </div>
     <div class="window-3">
-      <div class="personal-img"><img src="../image/Untitled design.png"></div>
+      <div class="personal-img"><img src="/image/Untitled design.png"></div>
       <div class="m"><h3>Welcome to Ridge's Portfolio</h3>
       </div>
       <div class="i">Here you will find the following...</div>
@@ -46,7 +46,7 @@
         <div class="How-to-open-links">If your having trouble with the links for each page use these hints</div>
       </div>
       <div class="lowest-explanation">
-        <div class="raspberry-pie"><img src="../image/CLSoEKeSyZ8EHAcb2jf3ga-1280-80.jpg"></div>
+        <div class="raspberry-pie"><img src="/image/CLSoEKeSyZ8EHAcb2jf3ga-1280-80.jpg"></div>
         <div class="explaination">
           <ol>
             <li>Go to the terminal</li>
@@ -56,7 +56,7 @@
             <li>Count the number of times the letter "I" is used in the Biography</li>
             <li>Make a space and then go to the Sky landers page and tell me the version number the the character list is on</li>
             <li>Lastly Give me the Last 2 letters on the first Skylanders charcter</li>
-            <li>Only click the button below if you dont want to challenge yourself <img src="../Icons/sad.png"> </li>
+            <li>Only click the button below if you dont want to challenge yourself <img src="/Icons/sad.png"> </li>
           </ol>
           <div class="cheat-button"><button>Cheat command</button></div>
         </div>
@@ -64,13 +64,13 @@
       <div class="footer">© 2025 Ridge Scroggins.</div>
     </div>
   </div>
-  <div class="terminal"><img src="../Icons/terminal.png"></div>
+  <div class="terminal"><img src="/Icons/terminal.png"></div>
   <div class="terminal-container"> 
     <div class="terminal-1">
         <div class="t-opening-section">
-          <div class="t-tab"><img src="../Icons/window.png">C:WINDOWS\system32\cmd.exe</div>
+          <div class="t-tab"><img src="/Icons/window.png">C:WINDOWS\system32\cmd.exe</div>
           <div class="icon-functions">
-            <img  src="../Icons/minus.png"><img  src="../Icons/maximise.png"><img  src="../Icons/close.png">
+            <img  src="/Icons/minus.png"><img  src="/Icons/maximise.png"><img  src="/Icons/close.png">
           </div>
         </div>  
       </div>
@@ -146,7 +146,7 @@ showLink.addEventListener("click", function (e) {
       document.body.style.cursor = "";
     }
   });
-})();
+})(); 
 
 
   </script>
