--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <img class="display-2" src="Icons/arrows.png" alt="green-arrow">
       </div>
       <div class="links">
-        <a href="" class="active">Home</a><a href="/HTML/about.html">About</a> <a href="/HTML/Projects.html">Projects</a>
+        <a href="" class="active">Home</a><a href="HTML/about.html">About</a> <a href="HTML/Projects.html">Projects</a>
       </div> 
     </div>
   </div>
@@ -24,7 +24,7 @@
       <div class="opening-section">
         <div class="tab"><img src="Icons/firefox.png">Ridge's Portfolio<img src="Icons/letter-x.png"></div>
         <div class="icon-functions">
-          <img id="hide-link" src="Icons/close.png"><img id="maximize-btn" src="Icons/square.png"><img id="close-btn" src="Icons/letter-x.png">
+          <img id="hide-link" src="Icons/minus.png"><img id="maximize-btn" src="Icons/square.png"><img id="close-btn" src="Icons/letter-x.png">
         </div>
       </div>  
     </div>
@@ -64,13 +64,13 @@
       <div class="footer">© 2025 Ridge Scroggins.</div>
     </div>
   </div>
-  <div class="terminal"><img src="/Icons/terminal.png"></div>
+  <div class="terminal"><img src="Icons/terminal.png"></div>
   <div class="terminal-container"> 
     <div class="terminal-1">
         <div class="t-opening-section">
-          <div class="t-tab"><img src="/Icons/window.png">C:WINDOWS\system32\cmd.exe</div>
+          <div class="t-tab"><img src="Icons/window.png">C:WINDOWS\system32\cmd.exe</div>
           <div class="icon-functions">
-            <img  src="/Icons/minus.png"><img  src="/Icons/maximise.png"><img  src="/Icons/close.png">
+            <img  src="Icons/minus.png"><img  src="Icons/maximise.png"><img  src="Icons/close.png">
           </div>
         </div>  
       </div>
