--- a/HTML/Projects.html
+++ b/HTML/Projects.html
@@ -14,7 +14,7 @@
       <img class="display-2" src="../Icons/right-chevron.png" alt="green-arrow">
       </div>
       <div class="links">
-        <a href="index.html">Home</a><a href="about.html">About</a> <a href="" class="active">Projects</a>
+        <a href="../index.html">Home</a><a href="about.html">About</a> <a href="" class="active">Projects</a>
       </div>
     </div>
   </div>
