--- a/HTML/about.html
+++ b/HTML/about.html
@@ -15,7 +15,7 @@
       <img class="display-2" src="../Icons/right-chevron.png" alt="green-arrow">
       </div>
       <div class="links">
-        <a href="index.html">Home</a><a href="" class="active">About</a> <a href="Projects.html">Projects</a>
+        <a href="../index.html">Home</a><a href="" class="active">About</a> <a href="Projects.html">Projects</a>
       </div>
     </div>
   </div>
