--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="heading"><!--<h2>Home_</h2>-->
-    <div class="moving-icon">
+    <div id="cheat-move" class="moving-icon">
       <div class="display-effect">
       <h2 class="display-1">More info</h2>
       <img class="display-2" src="Icons/arrows.png" alt="green-arrow">
@@ -19,65 +19,74 @@
     </div>
   </div>
   <div class="fire-fox-doc"><img id="show-link" src="Icons/FireFox-logo.png"></div>
-  <div id="hidden-section">
-    <div class="window">
-      <div class="opening-section">
-        <div class="tab"><img src="Icons/firefox.png">Ridge's Portfolio<img src="Icons/letter-x.png"></div>
-        <div class="icon-functions">
-          <img id="hide-link" src="Icons/minus.png"><img id="maximize-btn" src="Icons/square.png"><img id="close-btn" src="Icons/letter-x.png">
-        </div>
-      </div>  
-    </div>
-    <div class="window-2">
-      <div class="search-bar"><img src="Icons/left-arrow.png"> <input type="text" id="search-box" placeholder="  Search or enter address"></div>
-    </div>
-    <div class="window-3">
-      <div class="personal-img"><img src="image/Untitled design.png"></div>
-      <div class="m"><h3>Welcome to Ridge's Portfolio</h3>
-      </div>
-      <div class="i">Here you will find the following...</div>
-      <div class="main-links"><span><a href="" class="l-1" onclick="alert('Error: Page failed to load.'); return false;">Contact</a></span> <span><a href="" class="l-1" onclick="alert('Error: Page failed to load.'); return false;">About</a> </span><span><a href="" class="l-1" onclick="alert('Error: Page failed to load.'); return false;">Projects</a></span></div>
-      <div class="certifications">My Current Certifications</div>
-      <div class="contain-cert"><div class="cert-1"><a href="https://verify.w3schools.com/1Q03IJ2UFS">HTML Certification</a></div><div class="cert-2"> <a href="https://verify.w3schools.com/66G6SQ6HC">CSS Certification</a></div></div>
-      <div class="biography-t">My Biography</div>
-      <div class="biography"><p>My name is Ridge Scroggins, and for the past 22 years of my life, I've been fueled by a deep and lasting passion for technology. It's always been something I've gravitated toward, and over the years, I've devoted countless hours to learning, experimenting, and building within this ever-evolving field.I believe it all began with my dad. Back in the early 2000s, he was already very tech-savvy, and while technology wasn't as complex as it is today, it still felt like magic to me. Once he showed me what it could do, I was hooked.Like many kids, video games were a huge part of my early life. I'd stay up late, waiting in anticipation for releases I had looked forward to for months. Then came a game that changed everything for me, Skylanders. It introduced a physical element to video games, blending the real world with the digital. That's when I discovered the technology behind the character which were RFID chips and it became fascinated by how a real-world figure could become a playable in-game character.That curiosity sparked something deeper. I began exploring computer parts, building PCs, and experimenting with devices like Raspberry Pi boards. I even took apart my own consoles to understand how they worked. These hands-on experiences shaped not just my skills, but my mindset I love learning how things function and creating something meaningful from it.Since then, my interest has only grown. Whether it's working with hardware, coding, or solving complex problems, I find myself completely immersed in the world of technology. It's where I feel most focused, most inspired, and most capable. As I continue my journey through college and into my career, my goal is to keep building, learning, and contributing to the tech world. It's not just a field of study or a job to me it's a lifelong passion.</p></div>
-      <div class="lower-explanation">
-        <div class="raspberry-pie-t"><p>Raspberry pie</p></div>
-        <div class="How-to-open-links">If your having trouble with the links for each page use these hints</div>
-      </div>
-      <div class="lowest-explanation">
-        <div class="raspberry-pie"><img src="image/CLSoEKeSyZ8EHAcb2jf3ga-1280-80.jpg"></div>
-        <div class="explaination">
-          <ol>
-            <li>Go to the terminal</li>
-            <li>Type in the command for access control Unlock</li>
-            <li>type --key</li>
-            <li>find the earliest and latest leter in the alphabet that is captilized within the Biography Example: if the earliest in the alphabet is C and the latest is F then Type CF</li>
-            <li>Count the number of times the letter "I" is used in the Biography</li>
-            <li>Make a space and then go to the Sky landers page and tell me the version number the the character list is on</li>
-            <li>Lastly Give me the Last 2 letters on the first Skylanders charcter</li>
-            <li>Only click the button below if you dont want to challenge yourself <img src="Icons/sad.png"> </li>
-          </ol>
-          <div class="cheat-button"><button>Cheat command</button></div>
-        </div>
-      </div>
-      <div class="footer">© 2025 Ridge Scroggins.</div>
-    </div>
-  </div>
-  <div class="terminal"><img src="Icons/terminal.png"></div>
-  <div class="terminal-container"> 
-    <div class="terminal-1">
-        <div class="t-opening-section">
-          <div class="t-tab"><img src="Icons/window.png">C:WINDOWS\system32\cmd.exe</div>
+  <div class="windows">
+    <div id="hidden-section">
+      <div class="window">
+        <div class="opening-section">
+          <div class="tab"><img src="Icons/firefox.png">Ridge's Portfolio<img src="Icons/letter-x.png"></div>
           <div class="icon-functions">
-            <img  src="Icons/minus.png"><img  src="Icons/maximise.png"><img  src="Icons/close.png">
+            <img id="hide-link" src="Icons/minus.png"><img id="maximize-btn" src="Icons/square.png"><img id="close-btn" src="Icons/letter-x.png">
           </div>
         </div>  
       </div>
-      <div class="terminal-2"></div>
+      <div class="window-2">
+        <div class="search-bar"><img src="Icons/left-arrow.png"> <input type="text" id="search-box" placeholder="  Search or enter address"></div>
+      </div>
+      <div class="window-3">
+        <div class="personal-img"><img src="image/Untitled design.png"></div>
+        <div class="m"><h3>Welcome to Ridge's Portfolio</h3>
+        </div>
+        <div class="i">Here you will find the following...</div>
+        
+        <div class="main-links"><span><a href="HTML/about.html" class="l-1" id="link-contact" onclick="alert('Error: Page failed to load.'); return false;">Contact</a></span> <span><a href="HTML/about.html" class="l-1" id="link-about" onclick="alert('Error: Page failed to load.'); return false;">About</a> </span><span><a href="HTML/Projects.html" class="l-1" id="link-projects" onclick="alert('Error: Page failed to load.'); return false;">Projects</a></span></div>
+
+        <div class="certifications">My Current Certifications</div>
+        <div class="contain-cert"><div class="cert-1"><a href="https://verify.w3schools.com/1Q03IJ2UFS">HTML Certification</a></div><div class="cert-3"><a href="">Free-code-camp Certification</a></div><div class="cert-2"> <a href="https://verify.w3schools.com/66G6SQ6HC">CSS Certification</a></div></div>
+        <div class="biography-t">My Biography</div>
+        <div class="biography"><p>My name is Ridge Scroggins, and for the past 22 years of my life, I've been fueled by a deep and lasting passion for technology. It's always been something I've gravitated toward, and over the years, I've devoted countless hours to learning, experimenting, and building within this ever-evolving field.I believe it all began with my dad. Back in the early 2000s, he was already very tech-savvy, and while technology wasn't as complex as it is today, it still felt like magic to me. Once he showed me what it could do, I was hooked.Like many kids, video games were a huge part of my early life. I'd stay up late, waiting in anticipation for releases I had looked forward to for months. Then came a game that changed everything for me, Skylanders. It introduced a physical element to video games, blending the real world with the digital. That's when I discovered the technology behind the character which were RFID chips and it became fascinated by how a real-world figure could become a playable in-game character.That curiosity sparked something deeper. I began exploring computer parts, building PCs, and experimenting with devices like Raspberry Pi boards. I even took apart my own consoles to understand how they worked. These hands-on experiences shaped not just my skills, but my mindset I love learning how things function and creating something meaningful from it.Since then, my interest has only grown. Whether it's working with hardware, coding, or solving complex problems, I find myself completely immersed in the world of technology. It's where I feel most focused, most inspired, and most capable. As I continue my journey through college and into my career, my goal is to keep building, learning, and contributing to the tech world. It's not just a field of study or a job to me it's a lifelong passion.</p></div>
+        <div class="lower-explanation">
+          <div class="raspberry-pie-t"><p>Raspberry pie</p></div>
+          <div class="How-to-open-links">If your having trouble with the links for each page use these hints</div>
+        </div>
+        <div class="lowest-explanation">
+          <div class="raspberry-pie"><img src="image/CLSoEKeSyZ8EHAcb2jf3ga-1280-80.jpg"></div>
+          <div class="explaination">
+            <ol>
+              <li>Go to the terminal</li>
+              <li>Type in the command for access control Unlock</li>
+              <li>type --key</li>
+              <li>find the earliest and latest leter in the alphabet that is captilized within the Biography Example: if the earliest in the alphabet is C and the latest is F then Type CF</li>
+              <li>Count the number of times the letter "I" is used in the Biography</li>
+              <li>Make a space and then go to the Sky landers page and tell me the version number the the character list is on</li>
+              <li>Lastly Give me the Last 2 letters on the first Skylanders charcter</li>
+              <li>Only click the button below if you dont want to challenge yourself <img src="Icons/sad.png"> </li>
+            </ol>
+            <div id="show-cheat" class="cheat-button"><button>Cheat command</button></div>
+          </div>
+        </div>
+        <div class="footer">© 2025 Ridge Scroggins.</div>
+      </div>
+    </div>
+    <div class="terminal"><img id="show-terminal-2" src="Icons/terminal.png"></div>
+
+    <div class="terminal-container" id="terminal-container-2" style="display: none;"> 
+      <div class="terminal-1">
+          <div class="t-opening-section">
+            <div class="t-tab"><img src="Icons/window.png">C:WINDOWS\system32\cmd.exe</div>
+            <div class="icon-functions">
+              <img  src="Icons/minus.png"><img  src="Icons/maximise.png"><img id="close-terminal-link" src="Icons/close.png">
+            </div>
+          </div>  
+        </div>
+        <div class="terminal-2"><p class="text-for-terminal">Microsoft Windows XP [Version 5.1.2600] < C > Copyright 1985-2001 Microsoft 
+        </p><div class="terminal-3"><p>Corp. C:\Documents and Settings\admin></p>
+        <input id="unlock-command" type="text" spellcheck="false" placeholder=""></div>
+        </div>
+    </div>
   </div>
   <script>
-    const hideLink = document.getElementById("hide-link");
+    // === TERMINAL 1 CONTROLS ===
+const hideLink = document.getElementById("hide-link");
 const closeBtn = document.getElementById("close-btn");
 const showLink = document.getElementById("show-link");
 const section = document.getElementById("hidden-section");
@@ -101,7 +110,7 @@ showLink.addEventListener("click", function (e) {
   section.style.display = "block";
 });
 
-// Draggable functionality
+// Draggable functionality for Terminal 1
 (function makeSectionDraggable() {
   const dragTarget = section;
   const handle = dragTarget.querySelector(".opening-section");
@@ -146,8 +155,104 @@ showLink.addEventListener("click", function (e) {
       document.body.style.cursor = "";
     }
   });
-})(); 
+})();
 
+// === TERMINAL 2 CONTROLS ===
+const terminal2 = document.getElementById("terminal-container-2");
+const showBtn2 = document.getElementById("show-terminal-2");
+const closeLink2 = document.getElementById("close-terminal-link");
+
+// Show terminal 2
+showBtn2.addEventListener("click", function (e) {
+  e.preventDefault();
+  terminal2.style.display = "block";
+});
+
+// Close terminal 2 with the close link
+closeLink2.addEventListener("click", function (e) {
+  e.preventDefault();
+  terminal2.style.display = "none";
+});
+
+// Draggable functionality for Terminal 2
+(function makeTerminal2Draggable() {
+  const dragTarget = terminal2;
+  const handle = dragTarget.querySelector(".t-opening-section");
+
+  let offsetX = 0,
+      offsetY = 0,
+      isDragging = false;
+
+  handle.style.cursor = "move";
+
+  handle.addEventListener("mousedown", (e) => {
+    isDragging = true;
+
+    const rect = dragTarget.getBoundingClientRect();
+
+    dragTarget.style.position = "absolute";
+    dragTarget.style.left = `${rect.left}px`;
+    dragTarget.style.top = `${rect.top}px`;
+    dragTarget.style.margin = "0";
+    dragTarget.style.transform = "none";
+    dragTarget.style.zIndex = "999";
+
+    offsetX = e.clientX - rect.left;
+    offsetY = e.clientY - rect.top;
+
+    document.body.style.userSelect = "none";
+    document.body.style.cursor = "move";
+  });
+
+  document.addEventListener("mousemove", (e) => {
+    if (!isDragging) return;
+    dragTarget.style.left = `${e.clientX - offsetX}px`;
+    dragTarget.style.top = `${e.clientY - offsetY}px`;
+  });
+
+  document.addEventListener("mouseup", () => {
+    if (isDragging) {
+      isDragging = false;
+      document.body.style.userSelect = "";
+      document.body.style.cursor = "";
+    }
+  });
+
+  // Show hidden cheat section
+  document.getElementById("show-cheat").addEventListener("click", function () {
+    document.getElementById("cheat-move").style.visibility = "visible";
+  });
+})();
+
+// === UNLOCK LINKS ON ENTER ===
+document.getElementById("unlock-command").addEventListener("keydown", function (e) {
+  if (e.key === "Enter") {
+    const command = e.target.value.trim();
+    const correctCommand = "icacls 'C:\\--key AW16 VN33RO"; // change as needed
+
+    if (command === correctCommand) {
+      const links = [
+        { id: "link-contact", url: "HTML/contact.html" },
+        { id: "link-about", url: "HTML/about.html" },
+        { id: "link-projects", url: "HTML/about.html" }
+      ];
+
+      links.forEach(linkData => {
+        const link = document.getElementById(linkData.id);
+        if (link) {
+          link.removeAttribute("onclick");
+          link.setAttribute("href", linkData.url);
+          link.style.color = "black";
+        }
+      });
+
+      e.target.value = "";
+      alert("Links unlocked successfully!");
+    } else {
+      alert("Incorrect command. Try again.");
+    }
+  }
+});
 
   </script>
   
