--- a/HTML/Projects.html
+++ b/HTML/Projects.html
@@ -41,6 +41,12 @@
       </div>
       
     </div>
+    <div class="second-card-set">
+      <div class="img-4 iframe-wrapper">
+        <a href="https://rscroggins26.github.io/Magazine-project/" target="_blank" class="iframe-link">🔗</a>
+        <iframe src="https://rscroggins26.github.io/Magazine-project/" height="600px" width="960px"></iframe>
+      </div>
+    </div>
   </div>    
     
 </body>
