--- a/HTML/about.html
+++ b/HTML/about.html
@@ -25,7 +25,7 @@
         <div class="links-2"> <h3>Links:</h3> <div class="icons"><a href="mailto:Scrogginsr26@gmail.com"><img src="../Icons/communication.png" alt="Mail-icon"> </a><a href="https:www.linkedin.com/in/ridge-scroggins-572761259">
     <img src="../Icons/linkedin.png"  alt="linkedin-tag"></a> <a href="https://github.com/rscroggins26"><img src="../Icons/github.png" alt="github-icon"></a></div>
     </div> 
-    <p class="contact-promt">If you have any questions or inquries for me plz feel free to reach out using the following links or write it in the response box below with a way to contact you and I will be sure to reach out to you as soon as I can</p><div class="contact-form"><input type="text" placeholder="Enter your message..." class="message-promt"><button class="button" onclick="markClicked(this)">Click here</button></div>
+    <p class="contact-promt">If you have any questions or inquries for me please feel free to reach out using the following links or write it in the response box below with a way to contact you and I will be sure to reach out to you as soon as I can</p><div class="contact-form"><input type="text" placeholder="Enter your message..." class="message-promt"><button class="button" onclick="markClicked(this)">Click here</button></div>
   </div>
   <script>
   function markClicked(button) {
